# tappm_cli

./: LICENSE.txt  MANIFEST.in  README  README.md  README.rst  README.txt  setup.cfg  setup.py
data/: MPset.fasta  NOset.fasta  SPset.fasta  TAset.fasta
tappm/: __init__.py  dataset.py  dataset_maker.py  fasta.py  method.py  method_hmm.py
tappm/apps/: __init__.py  tappm_cli.py
tappm/hmm/: hmm.py  hmm_mp.py  util.py
tappm/io/: __init__.py  pathtools.py  report.py
tappm/models/: mp.pickle  mp.xml  sp.pickle  sp.xml  ta.pickle  ta2.pickle  ta3.pickle  ta4.pickle  ta4.xml  ta5.pickle  ta6.pickle  ta7.pickle  ta8.pickle  ta9.pickle
tappm/templates/: item.tab  item.txt  item.xml  report.tab  report.txt  report.xml
tappm/utils/: __init__.py  converter.py  doctools.py  helpformatter.py  logger.py
