[metadata]
# Meta data for the project as described in PEP 345
# field names are case-insensitive
name = tappm
version = 1.0.0
platform =
supported-platform=
summary = A HMM-based tail-anchored protein predictor
#description =
#description-file = README.txt
keywords = Bioinformatics
home_page = http://www.bi.a.u-tokyo.ac.jp
download-url =
author = Shunsuke Shigemitsu, Wei CAO
author_email = davecao@bi.a.u-tokyo.ac.jp
maintainer = Wei CAO
maintainer-email = davecao@bi.a.u-tokyo.ac.jp
license = GPL
classifier = Development Status :: 2 - Alpha
    Topic :: Bioinformatics
    Environment :: Other Environment
    License :: OSI Approved :: Apache Software License
    Development Status :: 4 - Beta
    Topic :: Documentation
    Topic :: Text Processing :: General
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: C
    Programming Language :: C++
requires-dist =
provides-dist =
obsoletes-dist =
#requires-python =
requires-externals =
project-url =

[global]
# Global options for Distutils2 shared with Distutil1
# commands =
# compiler =
# setup_hook =


[files]
# the root directory containing all packages.
# If not provided Distutils2 will use the current directory. *optional

packages_root =

# a list of packages the project includes *optional *multi

packages =
    tappm
    tappm.apps
    tappm.hmm
    tappm.utils
    tappm.templates
    tappm.models
    tappm.io

# a list of packages the project includes *optional *multi
modules =

#a list of scripts the project includes *optional *multi
scripts =

#a list of patterns to include extra files *optional *multi
extra_files =
    README.txt
    LICENSE.txt

package_data =
    tappm/templates/*.html
    tappm/templates/*.tab
    tappm/templates/*.txt
    tappm/templates/*.xml
    tappm/models/*.xml

# {datadir} is system-depended path. on Linux may be '/usr/share',
# then the final path looks like /usr/share/tappm/data/*
#
# {appdata} is '/usr/share/tappm', i.e., {datadir}/{project_name}/resources
resources =
    data/*.fasta = {appdata}

[build_ext]
# needed so that tests work without mucking with sys.path
#inplace = on

#[build_py]
#use-2to3 = True

[check]
strict = on
#all = on

[sdist]
#manifest-builders = package.module.Maker
